--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -19,6 +19,22 @@
 
 <div class="container">
     <h1>Welcome page</h1>
+
+    <div sec:authorize="isAuthenticated()">
+        Text visible only to authenticated users.
+        <br>
+        Authenticated username:
+        <div sec:authentication="principal.username"></div>
+        Authenticated user roles:
+        <div sec:authentication="principal.authorities"></div>
+    </div>
+
+    <div sec:authorize="hasRole('ADMIN')">
+        This content will only be visible to users who have the "supervisor" authority in their list of <tt>GrantedAuthority</tt>s.
+    </div>
+
+    <button id="testBtn">Test</button>
+    <br><br><br>
 </div>
 </body>
 <footer>
