--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -34,7 +34,7 @@
 
                 <div sec:authorize="isAuthenticated()">
                     <li class="nav-item">
-                        <form method="POST" th:action="@{/logout}">
+                        <form method="GET" th:action="@{/logout}">
                             <input class="btn btn-danger" type="submit" value="Logout"/>
                         </form>
                     </li>
