--- a/src/main/resources/templates/loginRememberMe.html
+++ b/src/main/resources/templates/loginRememberMe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <html>
 
@@ -59,9 +59,14 @@ label{padding-left:0 !important}
                  <label class="col-sm-4" th:text="#{label.form.login2fa}">Google Authenticator Verification Code</label>
                  <span class="col-sm-8"><input class="form-control" name='code' type='text' /></span>
                 
+                <div class="clearfix"></div>
+                <br/>
+                <label  th:text="#{label.form.rememberMe}"> Remember Me</label>
+                <input name="remember-me" type="checkbox" />
+                
                 <br/><br/>
                  <input class="btn btn-primary" name="submit" th:value="#{label.form.submit}" type="submit" />
- 
+                        
             </form>
             <br/> Current Locale :  <span th:text="${#locale}"></span><br/><br/> 
              <a class="btn btn-default" th:href="@{/registration.html}" th:text="#{label.form.loginSignUp}">signup</a>
